--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,13 @@
 */__pycache__/
 */*/__pycache__/
 */*/*/__pycache__/
+*/*/*/*/__pycache__/
+*/*/*/*/*/__pycache__/
+*/*/*/*/*/*/__pycache__/
+*/*/*/*/*/*/*/__pycache__/
+*/*/*/*/*/*/*/*/__pycache__/
+*/*/*/*/*/*/*/*/*/__pycache__/
+
+___cache___/
 
 *.log
