--- a/___utils___/requirements.txt
+++ b/___utils___/requirements.txt
@@ -1,27 +1,34 @@
-PyJWT==2.10.1
-PyMySQL==1.1.1
-annotated_types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+bs4==0.0.2
+certifi==2025.7.14
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
-cryptography==45.0.4
-dnspython==2.7.0
-email_validator==2.2.0
-fastapi==0.115.12
-greenlet==3.2.3
-h11==0.16.0
+contourpy==1.3.2
+cryptography==45.0.5
+cycler==0.12.1
+Flask==3.1.1
+fonttools==4.59.0
 idna==3.10
-passlib==1.7.4
-pip==25.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+numpy==2.3.2
+packaging==25.0
+pdfminer.six==20250506
+pillow==11.3.0
 pycparser==2.22
-pydantic==2.11.7
-pydantic_core==2.33.2
-python_dotenv==1.1.0
-sniffio==1.3.1
-sqlalchemy==2.0.41
-starlette==0.46.2
-typing_extensions==4.14.0
-typing_inspection==0.4.1
-uvicorn==0.34.3
+PyMuPDF==1.26.3
+pyparsing==3.2.3
+pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
+requests==2.32.4
+six==1.17.0
+soupsieve==2.7
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
